Fix #10: Wrap text that is too long

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -14,6 +14,14 @@
     padding: 30px;
 }
 
+pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 button {
     margin: 5px;
     width: 50px;
